--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,47 @@
+/* poppins-300 - latin */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/poppins-v20-latin-300.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* poppins-regular - latin */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins-v20-latin-regular.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* poppins-600 - latin */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/poppins-v20-latin-600.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* poppins-900 - latin */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 900;
+    src: url('../fonts/poppins-v20-latin-900.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
 :root{
     --color-primery-dark: #31261A;
     --color-primery-light: #faf4ea;
@@ -6,16 +50,52 @@
 }
 
 /* Bose */
-
+* {
+    box-sizing: border-box;;
+}
 body{
     color: var(--color-primery-dark);
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0;
 }
+
+h1, h2, h3, h4, h5, h6, p {
+    margin-top: 0;
+}
+
+address {
+    font-stretch: normal;
+}
+
 ul {
     list-style-type: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
+.section {
+    padding: 48px 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 1288px;
+    margin: 0 auto;
+}
+
 /* Button */
 .button{
+padding: 16px 32px;
 color: var(--color-primery-light);
 background-color: var(--color-brand-light);
 border: 2px solid var(--color-brand-light);
@@ -31,27 +111,112 @@ background-color:transparent;
 /* Link */
 .link{
     color: var(--color-primery-light);
+    text-decoration: none;
 }
 
 .link:hover{
     color: var(--color-brand-light);
+    font-weight: 600;
+    text-decoration: underline;
 }
 
 /* Hero section */
+.hero-section {
+    padding: 272px 0 ;
+}
 .hero-title{
     color: var(--color-primery-light);
+    text-align: center;
+    font-size: 128px;
+    margin-bottom: 0;
 }
 
-.hero-title .accent{
+.hero-title .accent {
     color: var(--color-brand-light); /* HEX value */
 }
 
 /* Advantages section */
-.advantages-list{
+.advantages-list {
     color: var(--color-primery-light);
     background: var(--color-brand-light);
 }
 
+.advantages-item {
+    font-size: 20px;
+    font-weight: 300px;
+}
+
+.section-title {
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
+}
+
 .section-title .accent{
     color: var(--color-brand-dark);
+}
+
+/* Traditions section */
+.traditions-section {
+    padding-top: 96px;
+}
+
+.traditions-title {
+    margin-bottom: 42px;
+}
+
+.traditions-text .brand {
+    color: var(--color-brand-light);
+    font-weight: 600;
+}
+
+.traditions-text .uppercase {
+    text-transform: uppercase;
+}
+
+/* Chef section */
+.chefs-title {
+    margin-bottom: 80px;
+}
+
+.chef-title {
+    margin-bottom: 16px;
+    font-size: 40px;
+    font-weight: 600; 
+}
+
+/* Format section */
+.formats-title {
+    margin-bottom: 80px;
+} 
+
+.format-title {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.format-text {
+    font-size: 14px;
+    font-weight: 300;
+}
+
+/* Contact section */
+.contact-title {
+    margin-bottom: 16px;
+}
+
+/* Footer */
+.address-link {
+    color: var(--color-primery-light);
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+}
+
+.address-link:hover {
+    color: var(--color-brand-light);
+}
+
+.address-copyright {
+    font-size: 14px;
 }
