--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,10 @@
 :root{
     --color-primery-dark: #31261A;
     --color-primery-light: #faf4ea;
+    --color-secondary-dark: #a28268;
     --color-brand-dark: #465929;
-    --color-brand-light: #819857;
+    --color-brand-normal: #819857;
+    --color-brand-light: #cfcfbc;
 }
 
 /* Bose */
@@ -55,6 +57,7 @@
 }
 body{
     color: var(--color-primery-dark);
+    background-color: var(--color-primery-light);
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     font-weight: 400;
@@ -71,7 +74,14 @@ address {
 }
 
 ul {
+    margin: 0;
+    padding: 0;
     list-style-type: none;
+}
+
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
 }
 
 .visually-hidden {
@@ -97,8 +107,8 @@ ul {
 .button{
 padding: 16px 32px;
 color: var(--color-primery-light);
-background-color: var(--color-brand-light);
-border: 2px solid var(--color-brand-light);
+background-color: var(--color-brand-normal);
+border: 2px solid var(--color-brand-normal);
 border-radius: 8px;
 cursor: pointer;
 }
@@ -115,14 +125,42 @@ background-color:transparent;
 }
 
 .link:hover{
-    color: var(--color-brand-light);
-    font-weight: 600;
-    text-decoration: underline;
+    color: var(--color-brand-normal);
 }
+
+/* Header */
+.header {
+    background-color:lightgray; /* remove */
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    gap: 40px;
+}
+
+.header-menu {
+    display: flex;
+    gap: 64px;
+    flex-grow: 1;
+    justify-content: center;
+}
+
 
 /* Hero section */
 .hero-section {
     padding: 272px 0 ;
+    background-image: url('../images/hero-section-background.jpg');
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
 }
 .hero-title{
     color: var(--color-primery-light);
@@ -132,16 +170,23 @@ background-color:transparent;
 }
 
 .hero-title .accent {
-    color: var(--color-brand-light); /* HEX value */
+    color: var(--color-brand-normal); /* HEX value */
 }
 
 /* Advantages section */
+.advantages-section { 
+    padding: 16px 0;
+    background: var(--color-brand-normal);
+}
+
 .advantages-list {
-    color: var(--color-primery-light);
-    background: var(--color-brand-light);
+    display: flex;
+    justify-content: space-between;
+    grid-area: 40px;
 }
 
 .advantages-item {
+    color: var(--color-primery-light);
     font-size: 20px;
     font-weight: 300px;
 }
@@ -150,6 +195,10 @@ background-color:transparent;
     font-size: 64px;
     font-weight: 900;
     line-height: 1.3;
+}
+
+.section-title.centered {
+    text-align: center;
 }
 
 .section-title .accent{
@@ -161,12 +210,22 @@ background-color:transparent;
     padding-top: 96px;
 }
 
+.traditions-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.traditions-content {
+    max-width: 710px;
+}
+
 .traditions-title {
     margin-bottom: 42px;
 }
 
 .traditions-text .brand {
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
     font-weight: 600;
 }
 
@@ -174,9 +233,29 @@ background-color:transparent;
     text-transform: uppercase;
 }
 
+.traditions-text.limited {
+    max-width: 350px;
+}
+
+
 /* Chef section */
 .chefs-title {
-    margin-bottom: 80px;
+    max-width: 532px;
+    margin: 0 auto 80px;
+}
+
+.chefs-title::before,
+.chefs-title::after {
+    display: block;
+    width: 352px;
+    border: 2px solid var(--color-brand-light);
+    content: '';
+}
+
+.chef-photo {
+    border-radius: 4px 4px 4px 200px;
+    box-shadow: -16px 16px 0 0 var(--color-primery-light),
+     -16px 16px 0 2px var(--color-secondary-dark);
 }
 
 .chef-title {
@@ -186,6 +265,28 @@ background-color:transparent;
 }
 
 /* Format section */
+.formats-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.formats-item {
+    flex-basis: calc((100% - 40px) / 3);
+}
+
+.format-card {
+    height: 444px;
+    padding: 24px;
+    background-image: linear-gradient(
+     180deg,
+     rgba(49, 38, 26, 0) 55.21%,
+     rgba(49, 38, 26, 0.71) 72.92%,
+     var(--color-primery-dark) 100%);
+    border: 1px solid lightgray; /*remove*/
+    border-radius: 16px;
+}
+
 .formats-title {
     margin-bottom: 80px;
 } 
@@ -199,6 +300,38 @@ background-color:transparent;
     font-size: 14px;
     font-weight: 300;
 }
+
+/* Carousel */
+.carousel-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    padding: 0;
+    fill: var(--color-primery-dark);
+    background-color: transparent;
+    border-radius: 50%;
+    border: 1px solid var(--color-primery-dark);
+    cursor: pointer;
+}
+
+
+
+.carousel-button:hover {
+    background-color: var(--color-primery-dark);
+    fill: var(--color-primery-light);
+}
+
+/* Можна додати до класу svg клас class="carousel-arrow", і вказати 
+.carousel-arrow {
+    fill: var(--color-primery-dark);
+}
+.carousel-button:hover .carousel-arrow {
+    fill: var(--color-primery-light);
+}
+ */
+
 
 /* Contact section */
 .contact-title {
@@ -214,9 +347,25 @@ background-color:transparent;
 }
 
 .address-link:hover {
-    color: var(--color-brand-light);
+    color: var(--color-brand-normal);
+}
+
+.address-icon {
+    fill: var(--color-primery-light);
+}
+
+.address-icon:hover {
+    fill: var(--color-brand-normal);
 }
 
 .address-copyright {
     font-size: 14px;
+}
+
+.footer {
+    background-color: var(--color-primery-dark);
+    background-image: url('../images/footer-background.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
