--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,9 @@
 }
 
 /* Bose */
-* {
+*,
+*::after,
+*::before {
     box-sizing: border-box;;
 }
 body{
@@ -67,6 +69,10 @@ body{
 
 h1, h2, h3, h4, h5, h6, p {
     margin-top: 0;
+}
+
+a {
+    display: inline-block;
 }
 
 address {
@@ -252,6 +258,21 @@ background-color:transparent;
     content: '';
 }
 
+.chefs-list {
+    display: flex;
+    gap: 40px 30px;
+    flex-wrap: wrap;
+}
+
+.chefs-item {
+    flex-basis: calc((100% - 30px) / 2);
+}
+
+.chef-card {
+    display: flex;
+    gap: 30px;
+}
+
 .chef-photo {
     border-radius: 4px 4px 4px 200px;
     box-shadow: -16px 16px 0 0 var(--color-primery-light),
@@ -264,7 +285,21 @@ background-color:transparent;
     font-weight: 600; 
 }
 
+.chef-text p {
+    margin-bottom: 24px;
+}
+
+.chef-text p:last-child {
+    margin-bottom: 0;
+}
+
 /* Format section */
+.formats-container {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+
 .formats-list {
     display: flex;
     flex-wrap: wrap;
@@ -306,6 +341,7 @@ background-color:transparent;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
     width: 44px;
     height: 44px;
     padding: 0;
@@ -315,8 +351,6 @@ background-color:transparent;
     border: 1px solid var(--color-primery-dark);
     cursor: pointer;
 }
-
-
 
 .carousel-button:hover {
     background-color: var(--color-primery-dark);
@@ -334,11 +368,51 @@ background-color:transparent;
 
 
 /* Contact section */
+.contact-section {
+    padding-bottom: 96px;
+}
+
+.contact-container {
+    display: flex;
+    gap: 32px;
+}
+
 .contact-title {
     margin-bottom: 16px;
 }
 
+.contact-map {
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: none;
+}
+
 /* Footer */
+.footer{
+    padding: 32px 0;
+}
+
+.footer-container {
+    display: flex;
+    gap: 20px;
+}
+.footer-nav,
+.footer-address {
+    flex-basis: 50%;
+    display: flex;
+    gap: 20px;
+}
+
+.footer-logo,
+.footer-menu {
+    flex-grow: 1;
+}
+
+.address-list,
+.address-info {
+    flex-grow: 1;
+}
+
 .address-link {
     color: var(--color-primery-light);
     font-size: 16px;
