--- a/css/styles.css
+++ b/css/styles.css
@@ -246,16 +246,26 @@ background-color:transparent;
 
 /* Chef section */
 .chefs-title {
-    max-width: 532px;
+    position: relative;
     margin: 0 auto 80px;
 }
 
 .chefs-title::before,
 .chefs-title::after {
+    position: absolute;
+    bottom: 24px;
     display: block;
     width: 352px;
     border: 2px solid var(--color-brand-light);
     content: '';
+}
+
+.chefs-title::before {
+    left: 0;
+}
+
+.chefs-title::after {
+    right: 0;
 }
 
 .chefs-list {
@@ -390,6 +400,34 @@ background-color:transparent;
 /* Footer */
 .footer{
     padding: 32px 0;
+    position: relative;
+    background-color: var(--color-primery-dark);
+    background-image: url('../images/footer-background.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.footer::before,
+.footer::after {
+    position: absolute;
+    bottom: 0;
+    background-repeat: no-repeat;
+    content: '';
+}
+
+.footer::before {
+    width: 180px;
+    height: 120px;
+    left: 0;
+    background-image: url('../images/decor-bread-small.png');
+}
+
+.footer::after {
+    width: 380px;
+    height: 190px;
+    right: 0;
+    background-image: url('../images/decor-bread-large.png');
 }
 
 .footer-container {
@@ -408,6 +446,7 @@ background-color:transparent;
     flex-grow: 1;
 }
 
+/* Address */
 .address-list,
 .address-info {
     flex-grow: 1;
@@ -436,10 +475,35 @@ background-color:transparent;
     font-size: 14px;
 }
 
-.footer {
-    background-color: var(--color-primery-dark);
-    background-image: url('../images/footer-background.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+/* Modal */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+    position: relative;
+    width: 880px;
+    height: 880px;
+    background-color: var(--color-primery-light);
+    border-radius: 32px;
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.modal-btn-close {
+    position: absolute;
+    top: 40px;
+    right: 40px;
 }
