--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ background-color:transparent;
 .link{
     color: var(--color-primery-light);
     text-decoration: none;
+    transition: color 0.3s;
 }
 
 .link:hover{
@@ -136,7 +137,11 @@ background-color:transparent;
 
 /* Header */
 .header {
-    background-color:lightgray; /* remove */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-top: 32px;
 }
 
 .header-container {
@@ -163,7 +168,13 @@ background-color:transparent;
 /* Hero section */
 .hero-section {
     padding: 272px 0 ;
-    background-image: url('../images/hero-section-background.jpg');
+    background-image: linear-gradient(
+        102.76deg,
+        rgba(18, 18, 17, 0.78) 2.03%,
+        rgba(18, 18, 17, 0.6) 58.46%,
+        rgba(18, 18, 17, 0) 90.36%
+        ),
+    url('../images/hero-section-background.jpg');
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
@@ -330,6 +341,11 @@ background-color:transparent;
      var(--color-primery-dark) 100%);
     border: 1px solid lightgray; /*remove*/
     border-radius: 16px;
+    transition: transform 0.3s;
+}
+
+.format-card:hover {
+    transform: scale(1.05)
 }
 
 .formats-title {
@@ -365,6 +381,10 @@ background-color:transparent;
 .carousel-button:hover {
     background-color: var(--color-primery-dark);
     fill: var(--color-primery-light);
+}
+
+.carousel-button.next {
+    transform: rotate(180deg);
 }
 
 /* Можна додати до класу svg клас class="carousel-arrow", і вказати 
@@ -485,13 +505,17 @@ background-color:transparent;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px 0;
     background-color: rgba(0, 0, 0, 0.5);
+    transition: opacity 0.3s, visibility 0.3s;
 }
 
 .modal {
     position: relative;
-    width: 880px;
-    height: 880px;
+    width: 100%;
+    max-width: 880px;
+    height: 100%;
+    max-height: 880px;
     background-color: var(--color-primery-light);
     border-radius: 32px;
 }
